2017-09-25  Youenn Fablet  <youenn@apple.com>

        Make captureCanvas-webrtc.html more robust
        https://bugs.webkit.org/show_bug.cgi?id=177334

        Reviewed by Darin Adler.

        Making test more robust by printing synchronously the canvas and increasing.
        the threshold for pixel comparison.
        Minor refactoring for improving the readability.

        * webrtc/captureCanvas-webrtc.html:

2017-09-25  Youenn Fablet  <youenn@apple.com>

        LayoutTest webrtc/video-mute.html is very often failing
        https://bugs.webkit.org/show_bug.cgi?id=177331

        Reviewed by Darin Adler.

        * webrtc/video-mute.html: using getStats instead of internals to check whether black frames are received.

2017-09-25  Ms2ger  <Ms2ger@igalia.com>

        Update waitSync and the TIMEOUT_IGNORED constant to use signed integers.
        https://bugs.webkit.org/show_bug.cgi?id=177239

        Reviewed by Žan Doberšek.

        This matches the specification.

        * fast/canvas/webgl/webgl2/constants-expected.txt: Added.
        * fast/canvas/webgl/webgl2/constants.html: Added.

2017-09-25  Manuel Rego Casasnovas  <rego@igalia.com>

        [css-grid] fit-content() tracks shouldn't stretch
        https://bugs.webkit.org/show_bug.cgi?id=177300

        Reviewed by Sergio Villar Senin.

        Added new case to an existent test and also modified
        the expected result in another one.

        * fast/css-grid-layout/grid-content-alignment-stretch-only-valid-for-auto-sized-tracks-expected.txt:
        * fast/css-grid-layout/grid-content-alignment-stretch-only-valid-for-auto-sized-tracks.html:
        * fast/css-grid-layout/grid-intrinsic-maximums-expected.html:

2017-09-24  Joanmarie Diggs  <jdiggs@igalia.com>

        [ATK] Object attributes are missing for ARIA live region roles
        https://bugs.webkit.org/show_bug.cgi?id=171174

        Reviewed by Chris Fleizach.

        Move two macOS tests to the shared layout test set.
