@@ -14,10 +14,25 @@
         if (window.testRunner)
             testRunner.setUserMediaPermission(true);
 
+        var remoteStream;
+        async function checkForSound(expected, message, count)
+        {
+            if (count === undefined)
+                count = 0;
+
+            var results = await analyseAudio(remoteStream, 200, context);
+            if (results.heardHum === expected)
+                return;
+            if (count > 50)
+                return Promise.reject("checkForSound timed out when testing: " + message);
+
+            await waitFor(100);
+            return checkForSound(expected, message, ++count);
+        }
+
         var localTrack;
         return navigator.mediaDevices.getUserMedia({audio: true}).then((localStream) => {
             localTrack = localStream.getAudioTracks()[0];
-            var remoteStream;
             return new Promise((resolve, reject) => {
                 createConnections((firstConnection) => {
                     firstConnection.addTrack(localTrack, localStream);
@@ -28,18 +43,12 @@
                     };
                 });
             }).then(() => {
-                return waitFor(500);
-            }).then(() => {
-                return analyseAudio(remoteStream, 500, context).then((results) => {
-                    assert_true(results.heardHum, "heard hum from remote enabled track");
-                });
+                return checkForSound(true, "should hear hum from remote enabled track");
             }).then(() => {
                 localTrack.enabled = false;
-                return waitFor(500);
+                return waitFor(100);
             }).then(() => {
-                return analyseAudio(remoteStream, 500, context).then((results) => {
-                    assert_false(results.heardHum, "not heard hum from remote disabled track");
-                });
+                return checkForSound(false, "should not hear hum from remote enabled track");
             }).then(() => {
                 return context.close();
             });
