@@ -1,5 +1,17 @@
 2017-09-25  Youenn Fablet  <youenn@apple.com>
 
+        webrtc/peer-connection-audio-mute.html is sometimes flaky
+        https://bugs.webkit.org/show_bug.cgi?id=172649
+
+        Reviewed by Darin Adler.
+
+        Iterating until getting the expected result to make test more stable.
+
+        * webrtc/peer-connection-audio-mute.html:
+        * webrtc/peer-connection-remote-audio-mute.html:
+
+2017-09-25  Youenn Fablet  <youenn@apple.com>
+
         Make captureCanvas-webrtc.html more robust
         https://bugs.webkit.org/show_bug.cgi?id=177334
 
